--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon server/app.js --watch server",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint components pages lib",
-    "dev-express": "nodemon server/app.js --watch server"
+    "lint": "eslint components pages lib"
   },
   "dependencies": {
     "@material-ui/core": "4.8.0",
@@ -17,6 +16,11 @@
     "express": "4.17.1",
     "express-session": "1.17.0",
     "mongoose": "5.8.2",
+    "googleapis": "46.0.0",
+    "lodash": "4.17.15",
+    "nprogress": "0.2.0",
+    "passport": "0.4.1",
+    "passport-google-oauth": "2.0.0",
     "next": "9.1.6",
     "prop-types": "15.7.2",
     "react": "16.12.0",
